# ftt-research

./: .gitignore  README.md  cell-plus-faces.f90
checkers/: README.txt  TODO.txt  test-harness.sh
checkers/arrayIndex/: .gitignore  Makefile  PathGrader.C  PathGrader.h  arrayIndex.C  arrayIndex.h  arrayIndexDocs.tex  arrayIndexMain.C  arrayIndexTest2.f90  cfgTraversal.C  cfgTraversal.h
checkers/haskell/multipleDeclarations/: kind.f90  kind.trm  multipleDeclarations.cabal
checkers/haskell/multipleDeclarations/example-aterms/: fma.trm  real2integer.trm  test1.trm  test2.trm
checkers/haskell/multipleDeclarations/example-programs/: fma.f90
checkers/haskell/multipleDeclarations/src/: Checker.hs
checkers/haskell/units-aterm/: unit.cabal
checkers/haskell/units-aterm/example-aterms/: operators.trm
checkers/haskell/units-aterm/example-programs/: operators.f90
checkers/haskell/units-aterm/src/: Checker.hs
checkers/implicitCast/: .gitignore  ConfigParser.cpp  ConfigParser.hpp  Makefile  TypeDescription.cpp  TypeDescription.hpp  compassTestMain.C  implicitCast.C  implicitCast.conf  implicitCastDocs.tex  implicitCastMain.C  implicitCastTest1.f90  run-tests.sh
checkers/implicitSave/: .gitignore  Makefile  implicitSave.C  implicitSaveDocs.tex  implicitSaveMain.C  implicitSaveTest1.f90  prerequisites.h  run-tests.sh
checkers/multipleDefinitions/: .gitignore  Makefile  multipleDefinitions.C  multipleDefinitionsDocs.tex  multipleDefinitionsMain.C
checkers/noCast/: Makefile.fortran  Makefile.orig  noCast.C
checkers/switchFallthrough/: .gitignore  Makefile  compass.C  prerequisites.h  switchFallthrough.C  switchFallthroughDocs.tex  switchFallthroughMain.C
haskell-fortran/: types.hs
interface-gen/: Makefile  test_igen.cpp  unparse_to_interface.cpp  unparse_to_interface.h
mini-fortran/: .gitignore  mini-fortran.cabal
mini-fortran/examples/: harmonic_motion.hs  jacobi-test.hs  jacobi.f90
mini-fortran/src/: Main.hs
mini-fortran/src/Language/: MiniFortran.hs
mini-fortran/src/Language/MiniFortran/: PrettyPrinter.hs  ToOpenCL.hs
opencl/: README
opencl/ForOpenCL/: .gitignore  CLBuffer.f90  CLDevice.f90  CLKernel.f90  ForOpenCL.f90  Makefile  OpenCL.f90  OpenCLInterfaces.f90  OpenCLTypes.f90  README  Timer.f90  elemental_add.cl  elemental_add.f90  elemental_add2.cl  multigrid.cl  multigrid.f90  opencl_test.c  opencl_utils.c
opencl/c/: .#CLBuffer.cpp  opencl_test.c  opencl_utils.c
opencl/f90/: CLBuffer.f90  CLDevice.f90  CLKernel.f90  FortranTraversal.cpp  Makefile  OpenCL.f90  OpenCLInterfaces.f90  OpenCLTypes.f90  Timer.f90  bandwidth.f90  elemental_add.cl  forcl.f90  mem_bandwidth.cl  results.txt  shallow_water.cl  shallow_water.f90  shallow_water_f.f90  shift.cl  test_shift.f90  test_shift_impl.f90  transpose.f90  update_weights.cl  update_weights.f90
opencl/paper-local/: advect.f90  local-orientation.f90  nh_core_simple.F90  programming-model.tex
opencl/papers/: Makefile  foropencl.bib  foropencl.tex  intro.tex  performance.tex  programming-model.tex  scatter.f90  shallow-water.tex  source-to-source.tex  timing.txt
opencl/transformations/: .gitignore  FortranAnalysis.cpp  FortranAnalysis.hpp  FortranTraversal.cpp  FortranTraversal.hpp  FortranTraversal.lo  IntrinsicsMapper.cpp  IntrinsicsMapper.hpp  Makefile  NodeMapper.hpp  Util.cpp  Util.hpp  advect.sh  build_opencl.cpp  cl_template.c  identity.sh  lope.pconf  (+3 more)
pagosa/: Advect_Basic.cl  Advect_Basic.f90  Advect_Basic_local.f90  Advect_Hydro.f90  Makefile  advect_basic.c  test_basic.f90
papers/: cl-performance.py  programming-model.tex  static-analysis.tex  timing.txt
parallel-halos/: .gitignore  Makefile  parallel_halo.f90  parallel_halo_types.f90  parallel_mpif08.f90  test_halos.f90  test_halos_c.c
sml-fortran/: README.txt
transformations/: files.txt
xml/: README
(+489 files in other folders)
