name:                multipleDeclarations
version:             0.1.0.0
synopsis:            Checks aterm representation for lines with multiple declarations
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagit@galois.com
copyright:           (c) 2012 Galois, Inc
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable multipleDeclarations
  main-is:             Checker.hs
  -- other-modules:       
  build-depends:       base < 5
                     , transformers
                     , aterm
                     , aterm-utils

  hs-source-dirs:      src
  ghc-options: -O2 -Wall
  if impl(ghc >= 7.0.1)
    ghc-prof-options: -rtsopts
  ghc-prof-options: -prof -auto-all -caf-all
