name:                unit
version:             0.1.0.0
synopsis:            Unit (dimensional) analysis for Fortran programs
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagit@galois.com
copyright:           (c) 2012, Galois Inc
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable unit
  main-is:             Checker.hs
  -- other-modules:       
  build-depends:       base < 5
                     , aterm
                     , aterm-utils
                     , transformers
                     , containers

  hs-source-dirs:      src
  ghc-options: -O2 -Wall
  if impl(ghc >= 7.0.1)
    ghc-prof-options: -rtsopts
  ghc-prof-options: -prof -auto-all -caf-all
